src/ReactComponents/ContractorDetails/ContractorDetails.scss
body {
  background-color: white;
}

@mixin container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

@mixin section {
  border: 1px solid silver;
  border-radius: 8px;
  margin: 10px 0px;
  width: 85%;
  height: fit-content;
  padding: 1px;
  padding-bottom: 10px;
}

.contractor-details-container {
  margin: 150px 150px 0px 100px;
  padding-top: 30px;
  padding-left: 50px;
}

.contractor-details {
  display: grid;
  grid-template-columns: 40% 60%;
  width: 100%;

  //* ----- PROFILE ----- */
  //* ↧↧↧↧↧↧↧↧↧↧↧↧↧↧↧↧↧↧↧ */

  &__profile {
    @include section();

    grid-column: 1/2;
    color: rgb(76, 76, 76);

    &__profile-img {
      align-items: center;
      border-radius: 100%;
      overflow: hidden;
      margin-left: 22%;
      padding: 0;
      height: 200px;
      width: 200px;
      border: 5px solid #ccc;

      &__profile-picture {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }

    &__title {
      @include container();
      width: fit-content;
      font-size: 1.2em;
      margin-bottom: 20px;
      &__name {
        text-align: center;
        margin: 0px 5px 1% 1%;
        font-size: 30px;
      }
      &__ratings {
        display: flex;

        align-items: center;
        text-align: left;
        margin-top: 1%;
        margin-right: 1%;
        span {
          margin-right: 5px;
        }
      }
    }
    &__about {
      width: 90%;
      p {
        margin: 5px 0px;
        margin-left: 25px;
        text-align: left;
      }
    }
    &__info {
      width: 90%;
      background-color: hsl(229, 100%, 95%);

      border-radius: 8px;
      padding: 20px;
      display: flex;
      flex-direction: column;
      margin-left: 25px;

      p {
        margin: 5px 0px;
        text-align: left;
        font-size: 15px;
      }

      svg {
        margin-right: 8px;
      }

      b {
        margin-right: 5px;
        font-weight: bold;
        font-size: 15px;
      }
    }
  }
  &__details {
    @include container;
    grid-column: 2/3;

    &__past-jobs {
      @include section;
      background-color: white;
      top: 0;
      height: fit-content;
      p {
        text-align: center;
        font-size: 1.5em;
        color: rgb(90, 90, 90);
        font-weight: 400;
      }
    }

    &__reviews {
      @include section();
      padding-top: 0;

      &__header {
        display: flex;
        margin: 15px 2%;

        justify-content: space-between;
        &__star-reviews {
          display: flex;
          align-items: center;
        }
        &__header-star {
          color: hsl(229, 100%, 30%);
          margin-right: 5px;
          font-weight: 500;
        }
        &__title {
          color: hsl(229, 100%, 30%);
          font-weight: 6 00;
        }
        &__button {
          button {
            display: flex;
            cursor: pointer;
            background-color: white;

            padding: 7px 10px;
            border-radius: 1.5rem;
            border: 1px solid hsl(229, 100%, 66%);
            color: hsl(229, 100%, 66%);
            font-weight: 500;
          }
        }
      }
      &__user-or-not {
        margin: 0px 2%;
        border: none;
        background-color: hsl(0, 0%, 95%);
        border-radius: 0.5rem;
        &__paragraph {
          padding: 20px 25px;

          p {
            font-size: 14px;
            font-weight: 500;
          }
        }
        &__buttons {
          padding-bottom: 25px;

          &__log-in {
            border-radius: 1.5rem;
            padding: 7px 12px;
            margin-right: 5px;
            background-color: hsl(229, 100%, 66%);
            border: none;
            color: white;
          }
          &__sign-up {
            border-radius: 1.5rem;
            padding: 7px 12px;
            margin-left: 5px;
            border: 1px solid hsl(229, 100%, 66%);
            color: hsl(229, 100%, 66%);
            font-weight: 500;
            background-color: white;
          }
        }
      }
    }
  }
}

